feat(benchmark): Add glove50 dataset and update configurationThis commit introduces the glove50 dataset to the benchmarking suite and refactors the configuration files.•Renamed random_config.yaml to benchmark_config_test1.yaml and updated it to include the new glove50 dataset.•Added the glove50 dataset files and their processed versions.•Updated .gitignore to allow tracking of dataset files.•Updated README.md to reflect the new configuration file name in the example command.•Deleted the obsolete scripts/configs/benchmark_config.yaml.

--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,9 @@ coverage.xml
 .ipynb_checkpoints
 
 # Data files
-data/
-*.npy
-*.pkl
+#data/
+#*.npy
+#*.pkl
 
 # Logs
 logs/
@@ -43,4 +43,4 @@ logs/
 # Results
 results/
 charts/
-figures/
+figures/!/data/
