--- a/configs/benchmark_config_test1.yaml
+++ b/configs/benchmark_config_test1.yaml
@@ -1,18 +1,18 @@
 datasets:
-  - glove50
-  - random
+  - name: glove50
+    metric: l2
+  - name: random
+    metric: l2
 n_queries: 100
 topk: 10
 repeat: 1
 algorithms:
   exact:
     type: ExactSearch
-    metric: l2
 #  hnsw:
 #    type: HNSW
 #    M: 16
 #    efConstruction: 200
 #    efSearch: 100
-#    metric: l2
 seed: 42
 output_prefix: benchmark
