chore(configs): update paths for shared storage locations in benchmark and default configs
- Configured `output_dir` and `data_dir` to point to PACE shared storage paths in relevant YAML files.
- Adjusted `runner.py` to load paths from config and prioritize shared repositories.
- Updated README and AGENTS.md with deployment-specific path notes.

--- a/configs/benchmark_config.yaml
+++ b/configs/benchmark_config.yaml
@@ -17,6 +17,8 @@ datasets:
     metric: l2
   - name: glove50
     metric: l2
+output_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/results
+data_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/datasets
 n_queries: 1000
 output_prefix: benchmark
 repeat: 1
