--- a/configs/benchmark_config_test1.yaml
+++ b/configs/benchmark_config_test1.yaml
@@ -3,6 +3,10 @@ datasets:
     metric: l2
   - name: random
     metric: l2
+
+output_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/results
+data_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/datasets
+
 n_queries: 100
 topk: 10
 repeat: 1
