feat(datasets): add support for MS MARCO and dataset-specific options
- Introduced MS MARCO dataset with configurable TF-IDF projection in `configs/benchmark_config.yaml` and corresponding processing logic in `Dataset`.
- Added `dataset_options` for fine-grained control over dataset preparation (e.g., passage limits, vector dimensions).
- Updated ExperimentRunner and BenchmarkRunner to handle dataset-specific options and overrides.
- Enhanced README with MS MARCO details and examples for configuring `dataset_options`.

--- a/configs/benchmark_config.yaml
+++ b/configs/benchmark_config.yaml
@@ -17,6 +17,17 @@ datasets:
     metric: l2
   - name: glove50
     metric: l2
+  - name: msmarco
+    metric: cosine
+    dataset_options:
+      version: v2.1
+      base_split: train
+      query_split: validation
+      base_limit: 8000
+      query_limit: 2000
+      max_passages_per_query: 5
+      vectorizer_max_features: 768
+      ground_truth_k: 10
 output_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/results
 data_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/datasets
 n_queries: 1000
