feat(datasets): add support for configurable cache directories
- Added `cache_dir` option to `benchmark_config.yaml` for defining custom cache storage locations.
- Updated `Dataset` logic to respect `cache_dir` and ensure directories are created if not present.
- Adjusted processed file storage to use `cache_dir` instead of `data_dir`.
- Enhanced README to document the new `cache_dir` option.

--- a/configs/benchmark_config.yaml
+++ b/configs/benchmark_config.yaml
@@ -28,6 +28,7 @@ datasets:
       max_passages_per_query: 5
       vectorizer_max_features: 768
       ground_truth_k: 10
+      cache_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/results/cache
 output_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/results
 data_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/datasets
 n_queries: 1000
