--- a/configs/benchmark_config.yaml
+++ b/configs/benchmark_config.yaml
@@ -67,13 +67,17 @@ datasets:
   - name: msmarco
     metric: cosine
     dataset_options:
-      version: v2.1
-      base_split: train
-      query_split: validation
+      use_preembedded: true
+      preembedded_passage_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/datasets/msmarco_pre_embeded/passages_parquet
+      preembedded_query_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/datasets/msmarco_pre_embeded/queries_parquet
+      passage_embedding_column: emb
+      query_embedding_column: emb
+      passage_id_column: _id
+      query_relevance_column: top1k_passage_ids
+      query_relevance_offsets_column: top1k_offsets
+      relevance_candidates_limit: 128
       base_limit: 8000
       query_limit: 2000
-      max_passages_per_query: 5
-      vectorizer_max_features: 768
       ground_truth_k: 10
       cache_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/results/cache
     algorithms:
