--- a/configs/benchmark_config.yaml
+++ b/configs/benchmark_config.yaml
@@ -82,8 +82,9 @@ datasets:
       query_relevance_column: top1k_passage_ids
       query_relevance_offsets_column: top1k_offsets
       relevance_candidates_limit: 64
-      base_limit: 200000
-      query_limit: 1000
+#      uncomment below to only process a limited size
+#      base_limit: 200000
+#      query_limit: 1000
       ground_truth_k: 1000
       cache_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/results/cache
     algorithms:
