--- a/configs/benchmark_config_smoke.yaml
+++ b/configs/benchmark_config_smoke.yaml
@@ -72,10 +72,12 @@ datasets:
       query_relevance_column: top1k_passage_ids
       query_relevance_offsets_column: top1k_offsets
       relevance_candidates_limit: 64
-      base_limit: 200000
-      query_limit: 1000
+#      base_limit: 200000
+#      query_limit: 1000
+      base_limit: 20000
+      query_limit: 100
       ground_truth_k: 1000
-      cache_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/results/cache
+      cache_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/results/cache_smoketest
     algorithms:
       exact:
         indexer_ref: brute_force_cosine
