--- a/pytest.ini
+++ b/pytest.ini
@@ -7,3 +7,4 @@ filterwarnings =
 markers =
     requires_faiss: Tests that require the FAISS dependency
 testpaths = tests
+; pytest tests/test_composite_algorithm.py -k "not hnsw"
