--- a/configs/benchmark_config.yaml
+++ b/configs/benchmark_config.yaml
@@ -38,6 +38,11 @@ indexers:
     index_key: IVF256,PQ64
     metric: l2
     nprobe: 24
+  faiss_ivf_pq_l2_glove:
+    type: FaissFactoryIndexer
+    index_key: IVF256,PQ50
+    metric: l2
+    nprobe: 24
   faiss_ivf_pq_cosine:
     type: FaissFactoryIndexer
     index_key: IVF256,PQ64
@@ -61,6 +66,23 @@ indexers:
     type: FaissFactoryIndexer
     index_key: PQ64
     metric: cosine
+  faiss_pq_l2_glove:
+    type: FaissFactoryIndexer
+    index_key: PQ50
+    metric: l2
+  lsh_l2:
+    type: LSHIndexer
+    metric: l2
+    num_tables: 12
+    hash_size: 18
+    bucket_width: 4.0
+    seed: 42
+  lsh_cosine:
+    type: LSHIndexer
+    metric: cosine
+    num_tables: 12
+    hash_size: 18
+    seed: 42
 
 searchers:
   linear_l2:
@@ -85,6 +107,16 @@ searchers:
     type: FaissSearcher
     metric: cosine
     nprobe: 48
+  lsh_search_l2:
+    type: LSHSearcher
+    metric: l2
+    candidate_multiplier: 8.0
+    fallback_to_bruteforce: true
+  lsh_search_cosine:
+    type: LSHSearcher
+    metric: cosine
+    candidate_multiplier: 8.0
+    fallback_to_bruteforce: true
 
 algorithms:
   exact:
@@ -111,6 +143,10 @@ algorithms:
     indexer_ref: faiss_pq_l2
     searcher_ref: faiss_l2_highprobe
     metric: l2
+  lsh:
+    indexer_ref: lsh_l2
+    searcher_ref: lsh_search_l2
+    metric: l2
 datasets:
   - name: random
     metric: l2
@@ -118,6 +154,11 @@ datasets:
 #    metric: l2
   - name: glove50
     metric: l2
+    algorithms:
+      ivf_pq:
+        indexer_ref: faiss_ivf_pq_l2_glove
+      pq:
+        indexer_ref: faiss_pq_l2_glove
   - name: msmarco
     metric: cosine
     dataset_options:
@@ -131,8 +172,8 @@ datasets:
       query_relevance_offsets_column: top1k_offsets
       relevance_candidates_limit: 64
 #      uncomment below to only process a limited size
-#      base_limit: 200000
-#      query_limit: 1000
+      base_limit: 300000
+      query_limit: 1000
       ground_truth_k: 1000
       cache_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/results/cache
     algorithms:
@@ -154,6 +195,10 @@ datasets:
       pq:
         indexer_ref: faiss_pq_cosine
         searcher_ref: faiss_cosine_highprobe
+      lsh:
+        indexer_ref: lsh_cosine
+        searcher_ref: lsh_search_cosine
+        metric: cosine
 output_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/results
 data_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/datasets
 n_queries: 1000
