Add memory-mapped dataset caching for large pre-embedded datasets, batch query evaluation, and enhanced passage processing controls.
- Introduced `use_memmap_cache` for streaming datasets directly into memory-mapped files.
- Added `query_batch_size` to support batched query evaluation.
- Improved passage processing with options: `strict_relevance_resolution`, `max_passage_scan`, and `progress_log_interval`.
- Updated related configuration files (YAML, AGENTS.md, README.md) with usage details.
- Refactored dataset processing and query execution for memory efficiency on constrained systems.

Added circuit breakers to the MS MARCO loader so you can stop scanning once the passage budget is full instead of trawling the entire corpus. New knobs strict_relevance_resolution (defaults to true) and max_passage_scan live alongside the other dataset options (src/benchmark/dataset.py:770-src/benchmark/dataset.py:784 and comments in configs/benchmark_config.yaml:175-configs/benchmark_config.yaml:178). Setting
    strict_relevance_resolution: false lets the loader exit as soon as base_limit passages have been retained—missing positives are logged and skipped—while max_passage_scan applies a hard cap on parquet rows inspected. Progress logs now print every progress_log_interval rows so you can see that loading is advancing (src/benchmark/dataset.py:1216-src/benchmark/dataset.py:1226).
  - Documentation was updated to explain how to combine these controls with the existing memmap cache and batch querying when you’re up against SLURM walltimes (README.md:91, AGENTS.md:45). Default configs now advertise the new switches so you can enable them per run without touching code (configs/benchmark_config.yaml:175-configs/benchmark_config.yaml:178).

--- a/configs/benchmark_config.yaml
+++ b/configs/benchmark_config.yaml
@@ -162,6 +162,7 @@ datasets:
   - name: msmarco
     metric: cosine
     dataset_options:
+      use_memmap_cache: true
       use_preembedded: true
       preembedded_passage_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/datasets/msmarco_pre_embeded/passages_parquet
       preembedded_query_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/datasets/msmarco_pre_embeded/queries_parquet
@@ -176,6 +177,10 @@ datasets:
       query_limit: 1000
       ground_truth_k: 1000
       cache_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/results/cache
+      #
+      strict_relevance_resolution: false  # break once base_limit is reached even if some positives are missing
+      max_passage_scan: 600000            # optional hard cap on parquet rows scanned
+      progress_log_interval: 10000       # log loader progress every N passage rows
     algorithms:
       exact:
         indexer_ref: brute_force_cosine
@@ -202,6 +207,7 @@ datasets:
 output_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/results
 data_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/datasets
 n_queries: 1000
+query_batch_size: 128
 output_prefix: benchmark
 repeat: 2
 seed: 42
