--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,7 @@ scipy>=1.9.0
 seaborn>=0.11.0
 pytest>=7.0.0
 pyspark>=3.5.0
+ir_datasets>=0.5.11
+python-box>=7.3.2
+pyyaml>=6.0
+sentence-transformers>=5.1.2
