• chore(slurm): standardize log output paths
  - switch all SLURM helpers to repo-relative log destinations and ensure the slurm_logs directory is created next to the scripts
  - add a .gitkeep in slurm_jobs/slurm_logs so the folder stays tracked, and tailor .gitignore to keep only real log output ignored
  - re-run the smoke benchmark to confirm logs now land under slurm_jobs/slurm_logs

--- a/.gitignore
+++ b/.gitignore
@@ -34,8 +34,9 @@ glove.*.txt
 # Logs
 logs/
 *.log
-slurm_logs/
-slurm_jobs/slurm_logs/
+/slurm_logs/
+slurm_jobs/slurm_logs/*
+!slurm_jobs/slurm_logs/.gitkeep
 
 # IDE specific files
 .idea/
