--- a/configs/benchmark_config.yaml
+++ b/configs/benchmark_config.yaml
@@ -143,6 +143,11 @@ algorithms:
     indexer_ref: faiss_pq_l2
     searcher_ref: faiss_l2_highprobe
     metric: l2
+  covertree:
+    type: CoverTree
+    metric: l2
+    candidate_pool_size: 256
+    max_visit_nodes: 4096
   lsh:
     indexer_ref: lsh_l2
     searcher_ref: lsh_search_l2
@@ -159,6 +164,9 @@ datasets:
         indexer_ref: faiss_ivf_pq_l2_glove
       pq:
         indexer_ref: faiss_pq_l2_glove
+      covertree:
+        candidate_pool_size: 512
+        max_visit_nodes: 8192
   - name: msmarco
     metric: cosine
     dataset_options:
@@ -198,6 +206,10 @@ datasets:
       pq:
         indexer_ref: faiss_pq_cosine
         searcher_ref: faiss_cosine_highprobe
+      covertree:
+        metric: cosine
+        candidate_pool_size: 1024
+        max_visit_nodes: 16384
       lsh:
         indexer_ref: lsh_cosine
         searcher_ref: lsh_search_cosine
