--- a/configs/benchmark_config.yaml
+++ b/configs/benchmark_config.yaml
@@ -155,10 +155,25 @@ algorithms:
 datasets:
   - name: random
     metric: l2
+    n_queries: 256
+    topk: 20
+    dataset_options:
+      dimensions: 64
+      train_size: 5000
+      test_size: 512
+      ground_truth_k: 200
+      seed: 7
 #  - name: sift1m
 #    metric: l2
   - name: glove50
     metric: l2
+    n_queries: 256
+    topk: 20
+    dataset_options:
+      test_size: 256
+      train_limit: 20000
+      ground_truth_k: 200
+      seed: 11
     algorithms:
       ivf_pq:
         indexer_ref: faiss_ivf_pq_l2_glove
@@ -167,46 +182,11 @@ datasets:
       covertree:
         candidate_pool_size: 512
         max_visit_nodes: 8192
-  - name: msmarco
-    metric: cosine
-    dataset_options:
-      use_memmap_cache: true
-      use_preembedded: true
-      embedded_dataset_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/datasets/msmarco_v1_embeddings
-      ground_truth_k: 200
-      cache_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/results/cache
-    algorithms:
-      exact:
-        indexer_ref: brute_force_cosine
-        searcher_ref: linear_cosine
-      hnsw:
-        indexer_ref: hnsw_cosine
-        searcher_ref: faiss_cosine
-      ivf_flat:
-        indexer_ref: faiss_ivf_cosine
-        searcher_ref: faiss_cosine
-      ivf_pq:
-        indexer_ref: faiss_ivf_pq_cosine
-        searcher_ref: faiss_cosine_highprobe
-      ivf_sq8:
-        indexer_ref: faiss_ivf_sq8_cosine
-        searcher_ref: faiss_cosine_highprobe
-      pq:
-        indexer_ref: faiss_pq_cosine
-        searcher_ref: faiss_cosine_highprobe
-      covertree:
-        metric: cosine
-        candidate_pool_size: 1024
-        max_visit_nodes: 16384
-      lsh:
-        indexer_ref: lsh_cosine
-        searcher_ref: lsh_search_cosine
-        metric: cosine
-output_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/results
+output_dir: benchmark_results
 data_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/datasets
 n_queries: 1000
 query_batch_size: 128
 output_prefix: benchmark
 repeat: 2
 seed: 42
-topk: 1000
+topk: 200
