--- a/configs/benchmark_nomsma.yaml
+++ b/configs/benchmark_nomsma.yaml
@@ -1,8 +1,4 @@
-#> random and glove50 are stored as Euclidean vectors, so their configs keep metric: l2 (with L2-compatible indexers/searchers). MS MARCO’s Cohere embeddings belong on the unit sphere and are almost always searched with cosine similarity (1 – dot product). Forcing everything to use the same metric would mean either:
-#
-#  - Pretending the MS MARCO embeddings are best handled by L2—which would hurt their recall, or
-#  - Converting the other datasets to cosine and swapping their index/search settings.
-#
+# Copy of benchmark_config.yaml without the MS MARCO dataset
 
 indexers:
   brute_force_l2:
@@ -152,6 +148,7 @@ algorithms:
     indexer_ref: lsh_l2
     searcher_ref: lsh_search_l2
     metric: l2
+
 datasets:
   - name: random
     metric: l2
@@ -163,8 +160,6 @@ datasets:
       test_size: 512
       ground_truth_k: 200
       seed: 7
-#  - name: sift1m
-#    metric: l2
   - name: glove50
     metric: l2
     n_queries: 256
@@ -182,45 +177,7 @@ datasets:
       covertree:
         candidate_pool_size: 512
         max_visit_nodes: 8192
-  - name: msmarco
-    metric: cosine
-    n_queries: 128
-    topk: 20
-    dataset_options:
-      use_memmap_cache: true
-      use_preembedded: true
-      embedded_dataset_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/datasets/msmarco_v1_embeddings
-      base_limit: 50000
-      query_limit: 200
-      ground_truth_k: 200
-      cache_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/results/cache
-    algorithms:
-      exact:
-        indexer_ref: brute_force_cosine
-        searcher_ref: linear_cosine
-      hnsw:
-        indexer_ref: hnsw_cosine
-        searcher_ref: faiss_cosine
-      ivf_flat:
-        indexer_ref: faiss_ivf_cosine
-        searcher_ref: faiss_cosine
-      ivf_pq:
-        indexer_ref: faiss_ivf_pq_cosine
-        searcher_ref: faiss_cosine_highprobe
-      ivf_sq8:
-        indexer_ref: faiss_ivf_sq8_cosine
-        searcher_ref: faiss_cosine_highprobe
-      pq:
-        indexer_ref: faiss_pq_cosine
-        searcher_ref: faiss_cosine_highprobe
-      covertree:
-        metric: cosine
-        candidate_pool_size: 1024
-        max_visit_nodes: 16384
-      lsh:
-        indexer_ref: lsh_cosine
-        searcher_ref: lsh_search_cosine
-        metric: cosine
+
 output_dir: benchmark_results
 data_dir: /storage/ice-shared/cs8903onl/vectordb-retrieval/datasets
 n_queries: 1000
