--- a/configs/benchmark_nomsma_c_v2.yaml
+++ b/configs/benchmark_nomsma_c_v2.yaml
@@ -70,14 +70,14 @@ indexers:
     type: LSHIndexer
     metric: l2
     num_tables: 12
-    hash_size: 18
-    bucket_width: 4.0
+    hash_size: 4
+    bucket_width: 20.0
     seed: 42
   lsh_cosine:
     type: LSHIndexer
     metric: cosine
     num_tables: 12
-    hash_size: 18
+    hash_size: 12
     seed: 42
 
 searchers:
@@ -106,13 +106,13 @@ searchers:
   lsh_search_l2:
     type: LSHSearcher
     metric: l2
-    candidate_multiplier: 8.0
-    fallback_to_bruteforce: true
+    candidate_multiplier: 64.0
+    fallback_to_bruteforce: false
   lsh_search_cosine:
     type: LSHSearcher
     metric: cosine
-    candidate_multiplier: 8.0
-    fallback_to_bruteforce: true
+    candidate_multiplier: 32.0
+    fallback_to_bruteforce: false
 
 algorithms:
   exact:
@@ -139,6 +139,10 @@ algorithms:
     indexer_ref: faiss_pq_l2
     searcher_ref: faiss_l2_highprobe
     metric: l2
+  covertree:
+    type: CoverTree
+    metric: l2
+    candidate_limits_enabled: false
   covertree_v2:
     type: CoverTreeV2
     metric: l2
@@ -154,7 +158,7 @@ datasets:
     topk: 20
     dataset_options:
       dimensions: 64
-      train_size: 5000
+      train_size: 20000
       test_size: 512
       ground_truth_k: 200
       seed: 7
@@ -172,6 +176,8 @@ datasets:
         indexer_ref: faiss_ivf_pq_l2_glove
       pq:
         indexer_ref: faiss_pq_l2_glove
+      covertree:
+        candidate_limits_enabled: false
       covertree_v2: {}
 
 output_dir: benchmark_results
